# Shard

./: .gitignore  Cargo.toml  README.md
benches/: ecs.rs
examples/: add_remove_components.rs  create_destroy_entity.rs  define_component.rs  iterations.rs
shard_ecs_derive/: Cargo.toml
shard_ecs_derive/src/: lib.rs
src/: archetype.rs  archetype_descriptor.rs  archetype_id.rs  archetype_registry.rs  component.rs  component_descriptor.rs  component_group.rs  component_group_descriptor.rs  component_type_id.rs  constants.rs  entity.rs  entity_registry.rs  fnv1a.rs  lib.rs  registry.rs  shard.rs  shard_registry.rs  test_components.rs
src/archetype/: data_access.rs  metadata.rs  mod.rs  tests.rs
src/archetype_registry/: archetype_iter.rs  archetype_iter_mut.rs  filter_clause.rs  iter.rs  iter_mut.rs  matching_iter.rs  matching_iter_mut.rs  mod.rs  sorted_archetype_key.rs  tests.rs
src/archetype_registry/iterators/: archetype_iter.rs  archetype_iter_mut.rs  (+7 more)
src/descriptors/: archetype_descriptor.rs  archetype_id.rs  component.rs  component_descriptor.rs  component_group.rs  component_group_descriptor.rs  component_type_id.rs  mod.rs
src/entity_register/: archetype_index.rs  entry.rs  index_in_archetype.rs  iterator.rs  mod.rs
src/entity_registry/: archetype_index.rs  entity.rs  entry.rs  iterator.rs  iterators.rs  mod.rs  registry.rs  tests.rs
src/registry/: mod.rs  registry.rs  tests.rs
src/shard/: metadata.rs  mod.rs  tests.rs
src/shard_registry/: internal.rs  mod.rs  sorted_archetype_key.rs  tests.rs
src/tests/: component_group.rs  entity.rs  entity_registry.rs  mod.rs  shard_registry.rs  test_components.rs
