[package]
name = "shard-ecs"
version = "0.2.5"
edition = "2021"
authors = ["Hindrik Stegenga <mail@hindrik.dev>"]
description = "The Shard Entity Component System."
license = "MIT"
homepage = "https://github.com/HindrikStegenga/Shard"
repository = "https://github.com/HindrikStegenga/Shard"

[dev-dependencies]
rand = "0.8.4"