[package]
name = "shard-ecs"
version = "0.2.7"
edition = "2021"
authors = ["Hindrik Stegenga <mail@hindrik.dev>"]
description = "The Shard Entity Component System."
license = "MIT"
homepage = "https://github.com/HindrikStegenga/Shard"
repository = "https://github.com/HindrikStegenga/Shard"

[features]
derive = ["shard_ecs_derive"]

[dependencies]
shard_ecs_derive = { version = "0.1.0", optional = true}

[dev-dependencies]
rand = "0.8.4"