[package]
name = "shard_ecs_derive"
version = "0.1.0"
edition = "2021"
authors = ["Hindrik Stegenga <mail@hindrik.dev>"]
description = "Contains derive macros for the Shard Entity Component System."
license = "MIT"
homepage = "https://github.com/HindrikStegenga/Shard"
repository = "https://github.com/HindrikStegenga/Shard"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"